--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <hr>
     <section>
         <h2>Lists</h2>
-        <a href="D:\Prepbytes\Assignments\index2.html" target="new">Click here</a>
+        <a href="./index2.html" target="new">Click here</a>
     </section>
 </body>
 </html>
