--- a/index2.html
+++ b/index2.html
@@ -80,6 +80,6 @@
         </li>
         <li>Cloud Service</li>
     </ul>
-    <a href="index.html">Go Back</a>
+    <a href="./index.html">Go Back</a>
 </body>
 </html>
